--- a/roles/aws-pdforums/tasks/main.yml
+++ b/roles/aws-pdforums/tasks/main.yml
@@ -1,9 +1,10 @@
 ---
-
-- include: dns.yml
+- name: Do DNSy things
+  ansible.builtin.include_tasks: dns.yml
   tags:
     - aws
 
-- include: iam.yml
+- name: Do IAM things
+  ansible.builtin.include_tasks: iam.yml
   tags:
     - aws
