--- a/roles/aws-route53/tasks/main.yml
+++ b/roles/aws-route53/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Install Boto
+  ansible.builtin.pip:
+    state: present
+    name:
+      - boto
+      - botocore
+
 - name: Aquarionics DNS
   ansible.builtin.include_tasks: aquarionics.yml
   tags:
