--- a/roles/water-gkhs-packages/handlers/main.yml
+++ b/roles/water-gkhs-packages/handlers/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: Restart fail2ban
-  ansible.builtin.service: name=fail2ban state=restarted
+  ansible.builtin.service:
+    name: fail2ban
+    state: restarted
 
 - name: Sysctl
   ansible.builtin.command: sysctl -p
