--- a/roles/water-gkhs-web-errors/tasks/main.yml
+++ b/roles/water-gkhs-web-errors/tasks/main.yml
@@ -40,7 +40,7 @@
     mode: 0644
   when: nginx_installed.stat.exists
   notify:
-    - restart nginx
+    - Restart nginx
 
 - name: "Apache: check for installation"
   register: apache_installed
