--- a/roles/water-gkhs-exim/tasks/main.yml
+++ b/roles/water-gkhs-exim/tasks/main.yml
@@ -20,7 +20,7 @@
     src: update-exim4.conf.conf.j2
     dest: /etc/exim4//update-exim4.conf.conf
     owner: root
-    ansible.builtin.group: root
+    group: root
     mode: 0640
     # validate: "update-exim4.conf --check %s"
   tags:
@@ -31,7 +31,7 @@
     src: exim.conf.j2
     dest: /etc/exim4/conf.d/main/00_water_gkhs_custom
     owner: root
-    ansible.builtin.group: root
+    group: root
     mode: 0640
     # validate: "update-exim4.conf --check %s"
   vars:
