--- a/roles/water-gkhs-nginx/handlers/main.yml
+++ b/roles/water-gkhs-nginx/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: Restart nginx
-  ansible.builtin.service: name=nginx state=restarted
+  ansible.builtin.service:
+    name: nginx
+    state: restarted
