--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -1,7 +1,7 @@
 ---
 name: Ansible Lint # feel free to pick your own name
 
-true: [push, pull_request]
+on: [push, pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
