--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     # Important: This sets up your GITHUB_WORKSPACE environment variable
       - uses: actions/checkout@v3
+      - name: Drop ansible.cfg file
+        run: rm ansible.cfg
 
       - name: Lint Ansible Playbook
         uses: ansible-community/ansible-lint-action@main
