Updates for Thalium nginx

--- a/roles/firth-nginx/tasks/main.yml
+++ b/roles/firth-nginx/tasks/main.yml
@@ -5,7 +5,7 @@
     state: present
   loop:
     - nginx
-    - python-passlib
+    - python3-passlib
     - libnginx-mod-http-fancyindex
   tags:
     - streamsite
