--- a/roles/water-gkhs-filebot/handlers/main.yml
+++ b/roles/water-gkhs-filebot/handlers/main.yml
@@ -12,7 +12,7 @@
     cache_valid_time: 21600
 
 - name: Get running processes
-  ansible.builtin.shell: ps -ef | grep -v grep | grep -w filebot_inotify.fifo | grep inotifywait | awk '{print $2}'
+  ansible.builtin.shell: set -o pipefail && ps -ef | grep -v grep | grep -w filebot_inotify.fifo | grep inotifywait | awk '{print $2}'
   register: running_processes
   listen: restart filebot inotify
 
