--- a/roles/water-gkhs-nginx/tasks/diffie-hellman.yml
+++ b/roles/water-gkhs-nginx/tasks/diffie-hellman.yml
@@ -29,6 +29,6 @@
     src: files/diffie-helman.conf
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   notify:
     - Restart nginx
