--- a/roles/cenote-apache/tasks/main.yml
+++ b/roles/cenote-apache/tasks/main.yml
@@ -10,7 +10,7 @@
   ansible.builtin.template:
     src: "{{ item }}"
     dest: /etc/apache2/conf.d/ssl-{{ item | basename }}
-    mode: 0644
+    mode: "0644"
   with_fileglob:
     - templates/ssl/*
   notify:
@@ -23,7 +23,7 @@
 #   ansible.builtin.template:
 #     src: "{{ item }}"
 #     dest: "/etc/apache2/cond.d/{{ item | basename }}"
-#     mode: 0644
+#     mode: "0644"
 #   with_fileglob:
 #    - templates/nginx_root/*
 #   notify:
@@ -36,7 +36,7 @@
   ansible.builtin.template:
     src: "{{ item }}"
     dest: /etc/apache2/conf.d/{{ item | basename }}
-    mode: 0644
+    mode: "0644"
   with_fileglob:
     - templates/apache_confd/*
   notify:
@@ -49,7 +49,7 @@
   ansible.builtin.template:
     src: "{{ item }}"
     dest: /etc/apache2/sites-available/{{ item | basename }}
-    mode: 0644
+    mode: "0644"
   with_fileglob:
     - templates/vhosts/*
   notify:
@@ -64,7 +64,7 @@
     path: /etc/apache2/sites-enabled/{{ item | basename }}
     src: ../sites-available/{{ item | basename }}
     state: link
-    mode: 0644
+    mode: "0644"
   with_fileglob:
     - templates/vhosts/*
   notify:
@@ -101,7 +101,7 @@
     path: /etc/apache2/streamsite.htpass
     name: "{{ item.user }}"
     password: "{{ item.password }}"
-    mode: 0644
+    mode: "0644"
   loop: "{{ streamsite_users }}"
   tags:
     - streamsite
@@ -111,7 +111,7 @@
 #   ansible.builtin.template:
 #     src: config/redirects.apache.j2
 #     dest: /etc/apache2/conf.d/www_redirects.conf
-#     mode: 0644
+#     mode: "0644"
 #   vars:
 #     add_www:
 #     - aquarionics.com
