--- a/roles/water-gkhs-mysql-backup/tasks/main.yml
+++ b/roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -31,7 +31,7 @@
     section: client
     option: user
     value: root
-    mode: 0600
+    mode: "0600"
     backup: true
 
 - name: Setup root user's password
@@ -40,7 +40,7 @@
     section: client
     option: password
     value: "{{ mysql_root_password }}"
-    mode: 0600
+    mode: "0600"
     backup: true
 
 # Setup backups
@@ -49,7 +49,7 @@
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
-    mode: 0755
+    mode: "0755"
   loop:
     - "{{ mysql_backup_location }}"
     - "{{ mysql_backup_location }}/Daily"
@@ -90,7 +90,7 @@
   ansible.builtin.template:
     src: mysql_backup.sh
     dest: /usr/local/bin/mysql_backup.sh
-    mode: 0755
+    mode: "0755"
 
 - name: Setup daily backup
   ansible.builtin.cron:
