--- a/roles/water-gkhs-nginx/tasks/main.yml
+++ b/roles/water-gkhs-nginx/tasks/main.yml
@@ -13,7 +13,7 @@
     src: files/clacks.conf
     owner: root
     group: root
-    mode: 0664
+    mode: "0664"
   notify:
     - Restart nginx
 
@@ -21,7 +21,7 @@
   ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/letsencrypt_ssl.conf
-    mode: 0664
+    mode: "0664"
   vars:
     cert_id: "{{ letsencrypt_dir }}"
 
@@ -31,7 +31,7 @@
   ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/foipme_ssl.conf
-    mode: 0664
+    mode: "0664"
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: foip.me
@@ -42,7 +42,7 @@
   ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/istic_ssl.conf
-    mode: 0664
+    mode: "0664"
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: istic.net
@@ -53,7 +53,7 @@
   ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/carcosadreams_ssl.conf
-    mode: 0664
+    mode: "0664"
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: carcosadreams.com
@@ -66,7 +66,7 @@
   ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/hubris_ssl.conf
-    mode: 0664
+    mode: "0664"
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: hubris.house
@@ -79,7 +79,7 @@
   ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/bromioscreations_ssl.conf
-    mode: 0664
+    mode: "0664"
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: bromioscreations.com
