--- a/roles/water-gkhs-web-errors/tasks/main.yml
+++ b/roles/water-gkhs-web-errors/tasks/main.yml
@@ -6,19 +6,19 @@
   ansible.builtin.file:
     path: /var/www/errors
     state: directory
-    mode: 0755
+    mode: "0755"
 
 - name: Create www directory
   ansible.builtin.file:
     path: /var/www/html
     state: directory
-    mode: 0755
+    mode: "0755"
 
 - name: Configure istic error pages
   ansible.builtin.template:
     src: "{{ item }}"
     dest: /var/www/errors/{{ item | basename }}
-    mode: 0644
+    mode: "0644"
   with_fileglob:
     - templates/errors/*
 
@@ -26,7 +26,7 @@
   ansible.builtin.template:
     src: errors/404_host.html
     dest: /var/www/html/index.html
-    mode: 0644
+    mode: "0644"
 
 - name: "Nginx: check for installation"
   register: nginx_installed
@@ -37,7 +37,7 @@
   ansible.builtin.template:
     src: config/errors_nginx.conf
     dest: /etc/nginx/snippets/errors.conf
-    mode: 0644
+    mode: "0644"
   when: nginx_installed.stat.exists
   notify:
     - Restart nginx
@@ -51,7 +51,7 @@
   ansible.builtin.template:
     src: config/errors_apache.conf
     dest: /etc/apache2/conf-enabled/errors.conf
-    mode: 0644
+    mode: "0644"
   when: apache_installed.stat.exists
   notify:
     - restart apache
