➕ Add unattended-upgrades

--- a/roles/water-gkhs-packages/tasks/main.yml
+++ b/roles/water-gkhs-packages/tasks/main.yml
@@ -52,6 +52,7 @@
       - fail2ban
       - dnsutils
       - acl
+      - unattended-upgrades
 
 - name: Install Debian System Packages
   when: ansible_distribution == 'Debian'
