Move dailyphotos to firth

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,5 @@
 inventory = ./etc/inventory.ini
 roles_path = galaxy-roles
 vault_password_file = ~/.vault_pass.txt
+
+interpreter_python=$VIRTUAL_ENV/bin/python
