--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 ansible==8.0.0
 ansible-compat==4.1.2
 ansible-core==2.15.0
-ansible-lint==6.17.2
+ansible-lint==6.17.*
 attrs==22.2.0
 black==22.12.0
 boto==2.49.0
@@ -28,8 +28,8 @@ python-dateutil==2.8.2
 PyYAML==6.0
 resolvelib==0.8.1
 rich==13.0.0
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.7
+ruamel.yaml==0.17.*
+ruamel.yaml.clib==0.2.*
 s3transfer==0.6.0
 six==1.16.0
 subprocess-tee==0.4.1
