update attributes to identified vault files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 host_vars/*net.yml diff=ansible-vault merge=binary
 group_vars/*.yml diff=ansible-vault merge=binary
+**.vault.??? diff=ansible-vault merge=binary
