--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,8 @@ roles_path = galaxy-roles
 vault_password_file = ~/.vault_pass.txt
 
 interpreter_python=$VIRTUAL_ENV/bin/python
+
+
+
+[ssh_connection]
+pipelining = True
