--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
-ansible==8.0.0
-ansible-compat==4.1.2
-ansible-core==2.15.0
-ansible-lint==6.17.*
+ansible==8.6.1
+ansible-compat==4.1.10
+ansible-core==2.15.6
+ansible-lint==6.22.0
 attrs==22.2.0
 black==22.12.0
 boto==2.49.0
 boto3==1.26.41
 botocore==1.29.41
 bracex==2.3.post1
+certifi==2023.7.22
 cffi==1.15.1
+charset-normalizer==3.2.0
 click==8.1.3
 commonmark==0.9.1
-cryptography==41.0.4
+cryptography==41.0.2
 filelock==3.9.0
+idna==3.4
 Jinja2==3.1.2
 jmespath==1.0.1
 jsonschema==4.17.3
@@ -26,14 +29,15 @@ Pygments==2.15.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 PyYAML==6.0
+requests==2.31.0
 resolvelib==0.8.1
 rich==13.0.0
-ruamel.yaml==0.17.*
-ruamel.yaml.clib==0.2.*
+ruamel.yaml==0.18.5
+ruamel.yaml.clib==0.2.7
 s3transfer==0.6.0
 six==1.16.0
 subprocess-tee==0.4.1
 tomli==2.0.1
-urllib3==1.26.17
+urllib3==1.26.13
 wcmatch==8.4.1
 yamllint==1.32.0
